tests/trybuild/api_resource_fail_enum.stderr
error: ApiResource can only be derived for structs
 --> tests/trybuild/api_resource_fail_enum.rs:4:6
  |
4 | enum WidgetResource {
  |      ^^^^^^^^^^^^^^
