tests/trybuild/api_resource_fail_enum.rs
use hubuum_client_derive::ApiResource;

#[derive(ApiResource)]
enum WidgetResource {
    First,
}

fn main() {}
